Comments Module: Add navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,4 @@
     </div> <!-- /container -->
 </main>
 
-<footer class="container">
-    <p>&copy; Company 2017-2018</p>
-</footer>
+<app-footer></app-footer>
