--- a/src/app/comments/components/comments-form/comments-form.component.html
+++ b/src/app/comments/components/comments-form/comments-form.component.html
@@ -10,16 +10,18 @@
     </div>
     <div class="form-group">
       <label for="email">Correo Electronico</label>
-      <input type="email" formControlName="email" class="form-control" id="email" placeholder="Password">
+      <input type="email" formControlName="email" class="form-control" id="email" placeholder="Correo Electronico">
     </div>
     <div class="form-group">
       <label for="website">Pagina web</label>
-      <input type="url" formControlName="website" class="form-control" id="website" placeholder="Password">
+      <input type="url" formControlName="website" class="form-control" id="website" placeholder="Sitio web">
     </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Comentario</label>
       <textarea formControlName="comment" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
-    <button type="button" class="btn btn-primary">Regresar</button>
-    <button type="submit" class="btn btn-primary">Guardar</button>
+    <div class="form-group-action">
+      <button type="button" [routerLink]="['']" class="btn btn-primary">Regresar</button>
+      <button type="submit" class="btn btn-primary">Guardar</button>
+    </div>
 </form>
