Comments Module: Add Comments Logic

--- a/src/app/comments/components/comments-list/comments-list.component.html
+++ b/src/app/comments/components/comments-list/comments-list.component.html
@@ -18,7 +18,7 @@
         <td>{{ comment.email }}</td>
         <td>{{ comment.website }}</td>
         <td>
-          <a [routerLink]="['comment', comment.email ]">Editar</a>
+          <a [routerLink]="['edit', comment.email ]">Editar</a>
         </td>
       </tr>
     </tbody>
