--- a/src/app/comments/components/comments-form/comments-form.component.html
+++ b/src/app/comments/components/comments-form/comments-form.component.html
@@ -22,6 +22,6 @@
     </div>
     <div class="form-group-action">
       <button type="button" [routerLink]="['']" class="btn btn-primary">Regresar</button>
-      <button type="submit" class="btn btn-primary">Guardar</button>
+      <button type="submit" class="btn btn-primary" [disabled]="commentForm.invalid">Guardar</button>
     </div>
 </form>
