--- a/src/app/comments/components/comments-form/comments-form.component.html
+++ b/src/app/comments/components/comments-form/comments-form.component.html
@@ -5,7 +5,7 @@
             formControlName="name"
             class="form-control" id="exampleInputEmail1" 
             aria-describedby="emailHelp" 
-            placeholder="Enter email">
+            placeholder="Introduzca nombre">
       <small id="emailHelp" class="form-text text-muted">Introduzca su nombre</small>
     </div>
     <div class="form-group">
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Comentario</label>
-      <textarea formControlName="comment" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea formControlName="comment" class="form-control"></textarea>
     </div>
     <div class="form-group-action">
       <button type="button" [routerLink]="['']" class="btn btn-primary">Regresar</button>
