--- a/src/app/comments/components/comments-list/comments-list.component.html
+++ b/src/app/comments/components/comments-list/comments-list.component.html
@@ -3,6 +3,7 @@
   <label for="exampleInputEmail1">Buscar</label>
   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
 </div>
+{{commentsData | json}}
 <table class="table table-striped">
     <thead>
       <tr>
